fixed bug,all is now working. Need to clean up and then style

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="DEVOUR IT!" data-id="{{id}}" data-newdev="{{devour}}">
-		{{#if devour}}DEVOURE TIME!{{/if}}
+	<button class="change-status" data-id="{{id}}" data-newburger="{{devour}}">
+		{{#if devour}}DEVOUR IT!{{/if}}
 	</button>
 </li>
