--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1>EAT-DA-BURGER!</h1>
+<h1>Eat-Da-Burger!</h1>
 
 <h2>Burgers to Eat</h2>
 
@@ -15,7 +15,7 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
+      {{> burgers/burger-block devour=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -25,14 +25,14 @@
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
-    <input type="text" id="bur" name="name">
+    <input type="text" id="ca" name="burger_name">
   </div>
 
-  {{!-- <div class="form-group">
+  <div class="form-group">
     <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div> --}}
+    <input type="radio" name="devoured" value="1" checked> Sleepy!<br>
+    <input type="radio" name="devoured" value="0"> Awake
+  </div>
 
-  <button type="submit">Add Burger</button>
+  <button type="submit">Add a Burger</button>
 </form>
