--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,11 +28,11 @@
     <input type="text" id="ca" name="burger_name">
   </div>
 
-  <div class="form-group">
+  {{!-- <div class="form-group">
     <label for="slee">Sleepy?</label><br>
     <input type="radio" name="devoured" value="1" checked> Sleepy!<br>
     <input type="radio" name="devoured" value="0"> Awake
-  </div>
+  </div> --}}
 
   <button type="submit">Add a Burger</button>
 </form>
