--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,33 @@
 <h1>Eat-Da-Burger!</h1>
 
-<h2>Burgers to Eat</h2>
+<div class="container">
+  <div class="row">
+    <div class="form-group col-md-6">
+      <h2>Burgers to Eat</h2>
 
-<ul>
-  {{#each burgers}}
-  {{#unless devoured}}
-  {{> burgers/burger-block devour=true}}
-  {{/unless}}
-  {{/each}}
-</ul>
+      <ul>
+        {{#each burgers}}
+        {{#unless devoured}}
+        {{> burgers/burger-block devour=true}}
+        {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
 
-<h2>Burgers Eaten</h2>
+    <div class="form-group col-md-6">
+      <h2>Burgers Eaten</h2>
 
 
-  {{#each burgers}}
-  {{#if devoured}}
-  <li>
-  {{burger_name}}
-  </li>
-  {{/if}}
-  {{/each}}
+      {{#each burgers}}
+      {{#if devoured}}
+      <li>
+        {{burger_name}}
+      </li>
+      {{/if}}
+      {{/each}}
+    </div>
+  </div>
+</div>
 
 
 <h2>Add a Burger</h2>
